--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7192,7 +7192,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  background-color: #0d6efd !important;
+  background-color: #e8e8e8 !important;
 }
 
 .bg-secondary {
