Added social icons in navigation bar

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,9 @@ header {
     background-size: cover;
     height: 100vh;
 }
+
+.navbar-social {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+}
