--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&family=Roboto&display=swap');
+
+* {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: large;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: bold;
+}
+
 header {
     background-image: url('../assets/header.jpg');
     background-repeat: no-repeat;
