--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,40 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&family=Roboto&display=swap");
 
 * {
-    font-family: 'Open Sans Condensed', sans-serif;
-    font-size: large;
+  font-family: "Open Sans Condensed", sans-serif;
+  font-size: large;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 1.25rem;
+}
+
+nav h1 {
+  margin-bottom: 0;
 }
 
 header {
-    background-image: url('../assets/header.jpg');
-    background-repeat: no-repeat;
-    background-position: center; 
-    background-size: cover;
-    height: 100vh;
+  background-image: url("/assets/header.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+}
+
+.bg-secondary {
+  background-color: #e8e8e8 !important;
+}
+
+article.card img {
+  height: 300px;
+  object-fit: cover;
 }
