--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
 
 * {
   font-family: "Open Sans Condensed", sans-serif;
-  font-size: large;
 }
 
 h1,
@@ -14,18 +13,10 @@ h6 {
   font-weight: bold;
 }
 
-h1 {
-  font-size: 1.25rem;
-}
-
-nav h1 {
-  margin-bottom: 0;
-}
-
 header {
   background-image: url("/assets/header.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: top;
   background-size: cover;
   height: 100vh;
 }
